a lot of changes
Yeah I uh rewrote the moduleinitializer code, changed up the structure (put the event IDs into an interface in the amalthea package and some other stuff). Also added chat feedback on what module was enabled / disabled.
No major changes. Also considering using the fabric registry system to store the modules (as seen in the /registries package).